# bvmt

./: .gitignore  LICENSE  README.md
core/: arg.cc  arg.h  array.cc  array.h  error.cc  error.h  iterator.cc  iterator.h  memory.cc  memory.h  optional.cc  optional.h  pointer.cc  pointer.h  string.cc  string.h  types.cc  types.h
example/: CMakeLists.txt  Makefile  README.md  main.cc
scripts/: combine_all_tests.py
triangle/assets/: README.md  World.logic
